# erp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.json
backend/: main.py  (+3 more)
frappe_app/: MANIFEST.in  README.md  pyproject.toml
frappe_app/docs/: MODULE_CATALOG.md
frappe_app/factorypulse_erp/: api.py  hooks.py  install.py  modules.txt  patches.txt  permissions.py
frappe_app/factorypulse_erp/config/: desktop.py
frappe_app/factorypulse_erp/factorypulse_erp/doctype/factorypulse_approvals/: factorypulse_approvals.json  factorypulse_approvals.py
frappe_app/factorypulse_erp/factorypulse_erp/doctype/factorypulse_assets/: factorypulse_assets.json  factorypulse_assets.py
frappe_app/factorypulse_erp/factorypulse_erp/doctype/factorypulse_attendance/: factorypulse_attendance.json  factorypulse_attendance.py
frappe_app/factorypulse_erp/factorypulse_erp/doctype/factorypulse_audit_event/: factorypulse_audit_event.json  factorypulse_audit_event.py
frappe_app/factorypulse_erp/factorypulse_erp/doctype/factorypulse_boiler/: factorypulse_boiler.json  factorypulse_boiler.py
frappe_app/factorypulse_erp/factorypulse_erp/doctype/factorypulse_by_products/: factorypulse_by_products.json  factorypulse_by_products.py
frappe_app/factorypulse_erp/factorypulse_erp/doctype/factorypulse_cane_registration/: factorypulse_cane_registration.json  factorypulse_cane_registration.py
frappe_app/factorypulse_erp/tests/: test_api_contract.py
frappe_app/scripts/: install_in_bench.ps1  install_in_bench.sh
frappe_app/tools/: validate_metadata.py
(+133 files in other folders)
